--- a/content/css/_fonts.scss
+++ b/content/css/_fonts.scss
@@ -11,3 +11,9 @@ $font_regular: 'DINOT-Regular',Sans-Serif;
 $font_medium:  'DINOT-Medium', Sans-Serif;
 $font_bold:    'DINOT-Bold', Sans-Serif;
 $font_light:   'DINOT-Light', Sans-Serif;
+
+h1,h2,h3,h4,h5,h6, #tabs ul li, nav ul li {
+  letter-spacing: 0!important;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=hIEfix.png,sizingMethod=crop)!important;
+  zoom:1!important;
+}
